# magos-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/config/: engine_config.json
Engine/src/: ConfigData.h.in  Engine.h  enginepch.h  test.cpp  test.h
Engine/src/Engine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
Engine/src/Engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvents.h
Engine/src/Engine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp
Engine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sandbox/src/: Application.cpp  SandboxApp.cpp
